--- a/index.html
+++ b/index.html
@@ -40,15 +40,10 @@
 	<div class="slide" id="slide1" data-slide="1" data-stellar-background-ratio="0.5">
 		<div class="container clearfix">
 
-			<div id="content" class="grid_7">
-				<h1>Top Slide</h1>
-				<h2>Get ready to make magic!</h2>
-				<p>Remember that this is a BETA version. This is my first framework so if you see any issue please <a href="mailto:jalxob@gmail.com">let me know it</a>. </p>
-				<p>Don't forget to follow me!</p>
-				<p><a href="https://twitter.com/Jalxob" target="_blank"><img src="images/twitter.png"></a> <a href="http://dribbble.com/jalxob" target="_blank"><img src="images/dribbble.png"></a></p>
-			</div>
-			<div id="decorative" class="grid_5 omega">
-				<img src="images/decorative.png">
+			<div id="content">
+				<h1>Judy Chen</h1>
+				<h5>Game Developer - Illustrator - Musician - Aspiring Pilot </h5>
+				<p>Hi, my name is Judy Chen. I am a fullstack developer interested in space, game theory, virtual reality, and machine learning.</p>
 			</div>
 
 		</div>
@@ -60,8 +55,6 @@
 		<div class="container clearfix">
 
 			<div id="content" class="grid_12">
-				<h1>Parallax Scrolling</h1>
-				<h2>What you've seen its called parallax scrolling</h2>
 			</div>
 
 		</div>
@@ -74,7 +67,6 @@
 
 			<div id="content" class="grid_12">
 				<h1>Grid</h1>
-				<h2>See how the grid changes when you resize your screen</h2>
 			</div>
 
 			<div id="test" class="grid_1">1</div> <div id="test" class="grid_11 omega">11</div>
@@ -100,9 +92,7 @@
 
 			<div id="content" class="grid_12">
 				<h1>Credits</h1>
-				<h2><a href="http://jalxob.com/cool-kitten" target="_blank">Cool Kitten</a> was made by <a href="http://www.jalxob.com" target="_blank">Jalxob</a>.</h2>
-				<p>Don't forget to follow me!</p>
-				<p><a href="https://twitter.com/Jalxob" target="_blank"><img src="images/twitter.png"></a> <a href="http://dribbble.com/jalxob" target="_blank"><img src="images/dribbble.png"></a></p>
+				<h2><a href="http://jalxob.com/cool-kitten" target="_blank">Cool Kitten</a></h2>
 			</div>
 
 		</div>
