--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable = no">
-	<title>Cool Kitten: A parallax scrolling responsive framework</title>
+	<title>Judy Chen</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
@@ -21,15 +21,15 @@
 		<div class="container clearfix">
 
 			<div id="logo" class="grid_3">
-				<img src="images/logo.png">
 			</div>
 
 			<div id="nav" class="grid_9 omega">
 				<ul class="navigation">
-					<li data-slide="1">Top Slide</li>
-					<li data-slide="2">Parallax Scrolling</li>
-					<li data-slide="3">Grid</li>
-					<li data-slide="4">Credits</li>
+					<li data-slide="1"><img src='images/home.png' width='25' height='25'></img></li>
+					<li data-slide="2">Projects</li>
+					<li data-slide="3">Games</li>
+					<li data-slide="4">Illustration</li>
+					<li data-slide="5">Contact</li>
 				</ul>
 			</div>
 
@@ -44,6 +44,12 @@
 				<h1>Judy Chen</h1>
 				<h5>Game Developer - Illustrator - Musician - Aspiring Pilot </h5>
 				<p>Hi, my name is Judy Chen. I am a fullstack developer interested in space, game theory, virtual reality, and machine learning.</p>
+
+				<img src='images/phone.png' width='42' height='42'></img>
+				<a href='mailto:judy.chen@uwaterloo.ca'><img src='images/mail.png' width='42' height='42'></img>
+				<a href='http://github.com/ju-de'><img src='images/github.png' width='42' height='42'></img></a>
+				<a href='http://ca.linkedin.com/in/append'><img src='images/linkedin.png' width='42' height='42'></img></a>
+
 			</div>
 
 		</div>
@@ -55,6 +61,15 @@
 		<div class="container clearfix">
 
 			<div id="content" class="grid_12">
+				<img src='images/proj/chorq1.png'></img>
+				<img src='images/proj/chorq2.png'></img>
+				<img src='images/proj/chorq3.png'></img>
+
+				<img src='images/proj/pio1.png'></img>
+				<img src='images/proj/pio2.png'></img>
+				<img src='images/proj/pio3.png'></img>
+				<img src='images/proj/pio4.png'></img>
+				<img src='images/proj/pio5.png'></img>
 			</div>
 
 		</div>
@@ -96,7 +111,7 @@
 			</div>
 
 		</div>
-	</div>
+	</div>	
 
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.stellar.min.js"></script>
