update header, include proj screens

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<div id="logo" class="grid_3">
 			</div>
 
-			<div id="nav" class="grid_9 omega">
+			<div id="nav" class="grid_9">
 				<ul class="navigation">
-					<li data-slide="1"><img src='images/home.png' width='25' height='25'></img></li>
+					<li data-slide="1"><img src='images/home.png' width='12' height='12'></img> Home </li>
 					<li data-slide="2">Projects</li>
 					<li data-slide="3">Games</li>
 					<li data-slide="4">Illustration</li>
@@ -41,15 +41,50 @@
 		<div class="container clearfix">
 
 			<div id="content">
+				<table>
+				<tr>
+					<td style="padding-right:24px">
+				<img src='images/head_icon.png'></imagesg>
+					</td>
+					<td>
 				<h1>Judy Chen</h1>
 				<h5>Game Developer - Illustrator - Musician - Aspiring Pilot </h5>
 				<p>Hi, my name is Judy Chen. I am a fullstack developer interested in space, game theory, virtual reality, and machine learning.</p>
+					</td>
+				</tr>
+				</table>
 
 				<img src='images/phone.png' width='42' height='42'></img>
 				<a href='mailto:judy.chen@uwaterloo.ca'><img src='images/mail.png' width='42' height='42'></img>
 				<a href='http://github.com/ju-de'><img src='images/github.png' width='42' height='42'></img></a>
 				<a href='http://ca.linkedin.com/in/append'><img src='images/linkedin.png' width='42' height='42'></img></a>
-
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
 			</div>
 
 		</div>
@@ -59,17 +94,36 @@
 
 	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
 		<div class="container clearfix">
+			<h1>Projects</h1>
 
 			<div id="content" class="grid_12">
-				<img src='images/proj/chorq1.png'></img>
-				<img src='images/proj/chorq2.png'></img>
-				<img src='images/proj/chorq3.png'></img>
-
-				<img src='images/proj/pio1.png'></img>
-				<img src='images/proj/pio2.png'></img>
-				<img src='images/proj/pio3.png'></img>
-				<img src='images/proj/pio4.png'></img>
-				<img src='images/proj/pio5.png'></img>
+			<table>
+				<tr>
+					<td>
+						<img src='images/proj/chorq1.png'></img>
+						<img src='images/proj/chorq2.png'></img>
+						<img src='images/proj/chorq3.png'></img>
+					</td>
+					<td><h2>Chorq</h2></td>
+				</tr>
+				<tr>
+					<td>
+						<img src='images/proj/pio1.png'></img>
+						<img src='images/proj/pio2.png'></img>
+						<img src='images/proj/pio3.png'></img>
+						<img src='images/proj/pio4.png'></img>
+						<img src='images/proj/pio5.png'></img>
+					</td>
+					<td><h2>Pass It On !!</h2></td>
+				</tr>
+				<tr>
+					<td>
+						<img src='images/proj/noted1.png'></img>
+						<img src='images/proj/noted2.png'></img>
+					</td>
+					<td><h2>Noted</h2></td>
+				</tr>
+			</table>
 			</div>
 
 		</div>
