--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<br>
 				<br>
 				<br>
-				<br>
+				<br><h2>Like most of Canada, this site is under construction.</h2>
 				<br>
 				<br>
 				<br>
@@ -104,7 +104,14 @@
 						<img src='images/proj/chorq2.png'></img>
 						<img src='images/proj/chorq3.png'></img>
 					</td>
-					<td><h2>Chorq</h2></td>
+					<td>
+						<h2>Chorq</h2>
+						<h5>
+							Languages: JavaScript, Jade, HTML5, Python, CSS3, PHP<br>
+							Tools: Node.js, MongoDB, Express, Monk, Kik API, BeautifulSoup, mySQL, Zepto, Monogo
+						</h5>
+						<p>Streamlines tab sharing, allowing users to group tabs into stacks, and Kik them to friends.</p>
+					</td>
 				</tr>
 				<tr>
 					<td>
@@ -113,15 +120,31 @@
 						<img src='images/proj/pio3.png'></img>
 						<img src='images/proj/pio4.png'></img>
 						<img src='images/proj/pio5.png'></img>
+						<h5>
 					</td>
-					<td><h2>Pass It On !!</h2></td>
+					<td><h2>Pass It On !!</h2>
+						<h5>
+							Languages: JavaScript, Jade, HTML5, Python, CSS3, PHP<br>
+							Tools: Node.js, MongoDB, Express, Monk, Kik API, BeautifulSoup, mySQL, Zepto, Monogo
+						</h5>
+						<p>Streamlines tab sharing, allowing users to group tabs into stacks, and Kik them to friends.</p>
+					</td>
 				</tr>
 				<tr>
 					<td>
 						<img src='images/proj/noted1.png'></img>
 						<img src='images/proj/noted2.png'></img>
 					</td>
-					<td><h2>Noted</h2></td>
+
+					<td>
+					<h2>Noted</h2>
+					<h5>
+						Languages: JavaScript, Jade, HTML5, Python, CSS3, PHP<br>
+						Tools: Node.js, MongoDB, Express, Monk, Kik API, BeautifulSoup, mySQL, Zepto, Monogo
+					</h5>
+					<p>Streamlines tab sharing, allowing users to group tabs into stacks, and Kik them to friends.</p>
+					</td>
+
 				</tr>
 			</table>
 			</div>
