--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
 				<table>
 				<tr>
 					<td style="padding-right:24px">
-				<img src='images/head_icon.png'></imagesg>
+						<img src='images/head_icon.png' width='260'></imagesg>
+						<br>
+						<img src='images/phone.png' width='42' height='42'></img>
+						<a href='mailto:judy.chen@uwaterloo.ca'><img src='images/mail.png' width='42' height='42'></img>
+						<a href='http://github.com/ju-de'><img src='images/github.png' width='42' height='42'></img></a>
+						<a href='http://ca.linkedin.com/in/append'><img src='images/linkedin.png' width='42' height='42'></img></a>
 					</td>
 					<td>
 				<h1>Judy Chen</h1>
@@ -58,10 +63,6 @@
 				</tr>
 				</table>
 
-				<img src='images/phone.png' width='42' height='42'></img>
-				<a href='mailto:judy.chen@uwaterloo.ca'><img src='images/mail.png' width='42' height='42'></img>
-				<a href='http://github.com/ju-de'><img src='images/github.png' width='42' height='42'></img></a>
-				<a href='http://ca.linkedin.com/in/append'><img src='images/linkedin.png' width='42' height='42'></img></a>
 				<br>
 				<br>
 				<br>
