--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 					<td style="padding-right:24px">
 						<img src='images/head_icon.png' width='260'></imagesg>
 						<br>
-						<img src='images/phone.png' width='42' height='42'></img>
-						<a href='mailto:judy.chen@uwaterloo.ca'><img src='images/mail.png' width='42' height='42'></img>
+						<a href='mailto:judy.chen@uwaterloo.ca'><img src='images/mail.png' width='42' height='42'></img></a>
+						<a href='http://soundcloud.com/jubnaut'><img src='images/soundcloud.png' width='42' height='42'></img></a>
 						<a href='http://github.com/ju-de'><img src='images/github.png' width='42' height='42'></img></a>
 						<a href='http://ca.linkedin.com/in/append'><img src='images/linkedin.png' width='42' height='42'></img></a>
 					</td>
@@ -202,7 +202,7 @@ $(document).ready(function() {
 		<div class="container clearfix">
 
 			<div id="content" class="grid_12">
-				<h1>Grid</h1>
+				<h1>Games</h1>
 			</div>
 
 			<div id="test" class="grid_1">1</div> <div id="test" class="grid_11 omega">11</div>
