--- a/index.html
+++ b/index.html
@@ -202,22 +202,85 @@ $(document).ready(function() {
 		<div class="container clearfix">
 
 			<div id="content" class="grid_12">
-				<h1>Games</h1>
+				Games
 			</div>
 
-			<div id="test" class="grid_1">1</div> <div id="test" class="grid_11 omega">11</div>
-			<div id="test" class="grid_2">2</div> <div id="test" class="grid_10 omega">10</div>
-			<div id="test" class="grid_3">3</div> <div id="test" class="grid_9 omega">9</div>
-			<div id="test" class="grid_4">4</div> <div id="test" class="grid_8 omega">8</div>
-			<div id="test" class="grid_5">5</div> <div id="test" class="grid_7 omega">7</div>
-			<div id="test" class="grid_6">6</div> <div id="test" class="grid_6 omega">6</div>
-			<div id="test" class="grid_7">7</div> <div id="test" class="grid_5 omega">5</div>
-			<div id="test" class="grid_8">8</div> <div id="test" class="grid_4 omega">4</div>
-			<div id="test" class="grid_9">9</div> <div id="test" class="grid_3 omega">3</div>
-			<div id="test" class="grid_10">10</div> <div id="test" class="grid_2 omega">2</div>
-			<div id="test" class="grid_11">11</div> <div id="test" class="grid_1 omega">1</div>
-			<div id="test" class="grid_12">12</div>
+			<div id="content" class="grid_12">
+				<h1>Eoin</h1>
+				<br><br>
 
+				<h1>Bleach Bear</h1>
+				<br> A game in which you are an armless bear. As you are unarmed, the only logical thing to do is to, of course, shoot honeycombs with a fish gun.
+				<br><br>
+
+
+				<div id="content" class="grid_6">
+
+				<img src='http://i.imgur.com/qA3MTJ7.gif'>
+				<img src='http://i.imgur.com/NPtLTht.gif'>
+				<img src='http://i.imgur.com/7dX2xED.gif'>
+				<img src='http://i.imgur.com/gdrtWgr.gif'>
+				<img src='http://i.imgur.com/RqoLAmj.gif'>
+				<img src='http://i.imgur.com/WF92SWT.gif'>
+				<br>
+				</div>
+				<div id="content" class="grid_6 omega">
+				<h2>Player</h2>
+				<p>This is you. You are a bear. You have nothing but your trusty fish gun. Not even arms. Why, you ask? But you can't speak. You are a bear.</p>
+				<br>
+				</div>
+
+
+
+
+				<div id="content" class="grid_8">
+				<h2>Enemies</h2>
+				<p>These are the honeycombs. The honeycombs have faces. This one walks. And the other one flies. How? You do not know. Once again, you are a bear.</p>
+				</div>
+				<div id="content" class="grid_4 omega">
+					<img src='http://i.imgur.com/qDJloCW.gif'>
+					<img src='http://i.imgur.com/fQYapml.gif'>
+					<img src='http://i.imgur.com/CG6kogL.gif'>
+					<img src='http://i.imgur.com/XzQ1VrZ.gif'>
+				</div>
+
+				<div id="content" class="grid_12"><br><h2>Items</h2></div>
+
+
+				<div id="content" class="grid_1">
+					<img src='http://i.imgur.com/Owt6k1M.png'>
+				</div>
+				<div id="content" class="grid_2">
+					<b>Boots</b><br>
+					Made for stomping.
+				</div>
+
+				<div id="content" class="grid_1">
+					<img src='http://i.imgur.com/noBnOkV.png'>
+				</div>
+				<div id="content" class="grid_2">
+					<b>Cherry Bomb</b><br>
+					Berry good.
+				</div>
+
+				<div id="content" class="grid_1">
+					<img src='http://i.imgur.com/KRimNmh.png'>
+				</div>
+				<div id="content" class="grid_2">
+					<b>Bottle of Bleach</b><br>
+					From pH to HP
+				</div>
+
+				<div id="content" class="grid_1">
+					<img src='http://i.imgur.com/ED4YeIG.png'>
+				</div>
+				<div id="content" class="grid_2">
+					<b>Boom-ble bee</b><br>
+					Just beecause.
+				</div>
+			</table>
+
+			</div>
 		</div>
 	</div>
 
