remove div margins to fix itemlist

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ $(document).ready(function() {
 			</div>
 
 			<div id="content" class="grid_12">
-				<h1>Eoin</h1>
+				<!--<h1>Eoin</h1>-->
 				<br><br>
 
 				<h1>Bleach Bear</h1>
@@ -214,7 +214,7 @@ $(document).ready(function() {
 				<br><br>
 
 
-				<div id="content" class="grid_6">
+				<div id="content" class="grid_6 omega">
 
 				<img src='http://i.imgur.com/qA3MTJ7.gif'>
 				<img src='http://i.imgur.com/NPtLTht.gif'>
@@ -247,7 +247,7 @@ $(document).ready(function() {
 				<div id="content" class="grid_12"><br><h2>Items</h2></div>
 
 
-				<div id="content" class="grid_1">
+				<div id="content" class="grid_1 omega">
 					<img src='http://i.imgur.com/Owt6k1M.png'>
 				</div>
 				<div id="content" class="grid_2">
@@ -255,7 +255,7 @@ $(document).ready(function() {
 					Made for stomping.
 				</div>
 
-				<div id="content" class="grid_1">
+				<div id="content" class="grid_1 omega">
 					<img src='http://i.imgur.com/noBnOkV.png'>
 				</div>
 				<div id="content" class="grid_2">
@@ -263,7 +263,7 @@ $(document).ready(function() {
 					Berry good.
 				</div>
 
-				<div id="content" class="grid_1">
+				<div id="content" class="grid_1 omega">
 					<img src='http://i.imgur.com/KRimNmh.png'>
 				</div>
 				<div id="content" class="grid_2">
@@ -271,15 +271,13 @@ $(document).ready(function() {
 					From pH to HP
 				</div>
 
-				<div id="content" class="grid_1">
+				<div id="content" class="grid_1 omega">
 					<img src='http://i.imgur.com/ED4YeIG.png'>
 				</div>
 				<div id="content" class="grid_2">
 					<b>Boom-ble bee</b><br>
 					Just beecause.
 				</div>
-			</table>
-
 			</div>
 		</div>
 	</div>
