now with table background

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<br>
 				<table>
 				<tr>
-					<td style="padding-right:24px">
+					<td style="padding-right:24px;">
 						<img src='images/head_icon.png' width='260'></imagesg>
 						<br>
 						<a href='mailto:judy.chen@uwaterloo.ca'><img src='images/mail.png' width='42' height='42'></img></a>
@@ -115,7 +115,7 @@ $(document).ready(function() {
 			<h1>Projects</h1>
 
 			<div id="content" class="grid_12">
-			<table>
+			<table style="background: rgba(0,0,0,0.85);">
 				<tr>
 					<td>
 						<div id="owl-demo">
