add resume download link

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 				<h1>Judy Chen</h1>
 				<h5>Game Developer - Illustrator - Musician - Aspiring Pilot </h5>
 				<p>Hi, my name is Judy Chen. I am a fullstack developer interested in space, game theory, virtual reality, and machine learning.</p>
+				<p><a href = "https://github.com/ju-de/ju-de.github.io/raw/master/resume.pdf">Resume</a></p>
 					</td>
 				</tr>
 				</table>
@@ -112,13 +113,12 @@ $(document).ready(function() {
 
 	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
 		<div class="container clearfix">
-			<h1>Projects</h1>
 
 			<div id="content" class="grid_12">
 			<table style="background: rgba(0,0,0,0.85);">
+				
 				<tr>
 					<td>
-						<div id="owl-demo">
           
 	<div class="item"><img src='images/proj/chorq1.png' alt="Owl Image"></div>
 	<div class="item"><img src='images/proj/chorq2.png' alt="Owl Image"></div>
