--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ $(document).ready(function() {
 		<div class="container clearfix">
 			<div id="content" class="grid_12">
 				<h2>Illustration</h2>
-				<a href = 'jubnaut.tumblr.com'>See more on my art blog</a><br><br>
+				<a href = 'http://jubnaut.tumblr.com'>See more on my art blog</a><br><br>
 			</div>
 			<div id="content" class="grid_6">
 			
