--- a/index.html
+++ b/index.html
@@ -13,17 +13,12 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 	<!-- <link rel="stylesheet" href="css/style.min.css" type="text/css" media="screen"> -->
 	<!--[if IE]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<!-- Important Owl stylesheet -->
-<link rel="stylesheet" href="css/owl.carousel.css">
- 
-<!-- Default Theme -->
-<link rel="stylesheet" href="css/owl.theme.css">
- 
 <!--  jQuery 1.7+  -->
 <script src="js/jquery-1.9.1.min.js"></script>
  
-<!-- Include js plugin -->
-<script src="js/owl.carousel.js"></script>
+<link rel="stylesheet" type="text/css" href="js/slick-1.5.7/slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="js/slick-1.5.7/slick/slick-theme.css"/>
+
 </head>
 
 <body>
@@ -103,15 +98,8 @@
 		</div>
 	</div>
 
-	<script>
-$(document).ready(function() {
-
-  $("#owl-demo").owlCarousel();
-
-});
-	</script>
-
 	<div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
+
 		<div class="container clearfix">
 
 			<div id="content" class="grid_12">
@@ -119,12 +107,14 @@ $(document).ready(function() {
 				
 				<tr>
 					<td>
-          
-	<div class="item"><img src='images/proj/chorq1.png' alt="Owl Image"></div>
-	<div class="item"><img src='images/proj/chorq2.png' alt="Owl Image"></div>
-	<div class="item"><img src='images/proj/chorq2.png' alt="Owl Image"></div>
-	<div class="item"><img src='images/proj/chorq3.png' alt="Owl Image"></div>
 
+					<div style = "width: 600px">
+					<div class = "data-slick" style="background: rgba(0,0,0,0.85);">
+					  <div><img src='images/proj/chorq1.png'></div>
+					  <div><img src='images/proj/chorq2.png'></div>
+					  <div><img src='images/proj/chorq3.png'></div>
+					</div>
+					</div>
 
 					</td>
 					<td>
@@ -140,14 +130,18 @@ $(document).ready(function() {
 
 				<tr>
 					<td>
-						<img src='images/proj/pio1.png'></img>
-						<img src='images/proj/pio2.png'></img>
-						<img src='images/proj/pio3.png'></img>
-						<img src='images/proj/pio4.png'></img>
-						<img src='images/proj/pio5.png'></img>
-						<h5>
+						<div style = "width: 600px">
+						<div class = "data-slick" style="background: rgba(0,0,0,0.85);">
+						  <div><img src='images/proj/pio1.png'></div>
+						  <div><img src='images/proj/pio2.png'></div>
+						  <div><img src='images/proj/pio3.png'></div>
+						  <div><img src='images/proj/pio4.png'></div>
+						  <div><img src='images/proj/pio5.png'></div>
+						</div>
+						</div>
 					</td>
-					<td><h2>Pass It On !!</h2>
+					<td>
+						<h2>Pass It On !!</h2>
 						<h5>
 							Languages: JavaScript, JQuery, PHP, HTML5, CSS<br>
 							Tools: MySQL, Facebook API, Ziggeo API, Hammerjs, Google Maps API
@@ -159,8 +153,12 @@ $(document).ready(function() {
 
 				<tr>
 					<td>
-						<img src='images/proj/noted1.png'></img>
-						<img src='images/proj/noted2.png'></img>
+						<div style = "width: 600px">
+						<div class = "data-slick" style="background: rgba(0,0,0,0.85);">
+						  <div><img src='images/proj/noted1.png'></div>
+						  <div><img src='images/proj/noted2.png'></div>
+						</div>
+						</div>
 					</td>
 
 					<td>
@@ -176,8 +174,12 @@ $(document).ready(function() {
 
 				<tr>
 					<td>
-						<img src='images/proj/eye1.png'></img>
-						<img src='images/proj/eye2.png'></img>
+						<div style = "width: 600px">
+						<div class = "data-slick" style="background: rgba(0,0,0,0.85);">
+						  <div><img src='images/proj/eye1.png'></div>
+						  <div><img src='images/proj/eye2.png'></div>
+						</div>
+						</div>
 					</td>
 
 					<td>
@@ -322,6 +324,16 @@ $(document).ready(function() {
 	<script type="text/javascript" src="js/waypoints.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="js/scripts.js"></script>
-	<!-- <script type="text/javascript" src="js/scripts.min.js"></script> -->
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="js/slick-1.5.7/slick/slick.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function(){
+		  $('.data-slick').slick({
+		  	dots: true,
+		  	infinite: true,
+		  	autoplay: true
+		  });
+		});
+	</script>
 </body>
 </html>
