make it not overlap the text maybe??????

--- a/index.html
+++ b/index.html
@@ -102,28 +102,93 @@
 
 		<div class="container clearfix">
 
-			<div id="content" class="grid_12">
-			<table style="background: rgba(0,0,0,0.85);">
-				
-				<tr>
-					<td>
+			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85);">
 
-					<div style = "width: 600px">
-					<div class = "data-slick" style="background: rgba(0,0,0,0.85);">
+				<div id="content" class="grid_8">
+
+					<div class = "data-slick" style="width: 600px">
 					  <div><img src='images/proj/chorq1.png'></div>
 					  <div><img src='images/proj/chorq2.png'></div>
 					  <div><img src='images/proj/chorq3.png'></div>
 					</div>
-					</div>
 
-					</td>
-					<td>
+				</div>
+				<div id="content" class="grid_4 omega">
+						<br><br><br><br><br>
 						<h2>Chorq</h2>
 						<h5>
 							Languages: JavaScript, Jade, HTML5, Python, CSS3, PHP<br>
 							Tools: Node.js, MongoDB, Express, Monk, Kik API, BeautifulSoup, mySQL, Zepto, Monogo
 						</h5>
 						<p>Streamlines tab sharing, allowing users to group tabs into stacks, and Kik them to friends.</p>
+				</div>
+
+				<div id="content" class="grid_8">
+
+					<div class = "data-slick" style="width: 600px">
+						<div><img src='images/proj/pio1.png'></div>
+						<div><img src='images/proj/pio2.png'></div>
+						<div><img src='images/proj/pio3.png'></div>
+						<div><img src='images/proj/pio4.png'></div>
+						<div><img src='images/proj/pio5.png'></div>
+					</div>
+
+				</div>
+				<div id="content" class="grid_4 omega">
+						<br><br><br><br><br>
+						<h2>Pass It On !!</h2>
+						<h5>
+							Languages: JavaScript, JQuery, PHP, HTML5, CSS<br>
+							Tools: MySQL, Facebook API, Ziggeo API, Hammerjs, Google Maps API
+						</h5>
+						<p>Location-based image and video sharing platform that visually plots how media spreads by allowing users to track the journey of their uploads.</p>
+				</div>
+
+				<div id="content" class="grid_8">
+
+					<div class = "data-slick" style="width: 600px">
+						  <div><img src='images/proj/noted1.png'></div>
+						  <div><img src='images/proj/noted2.png'></div>
+					</div>
+
+				</div>
+				<div id="content" class="grid_4 omega">
+					<br><br><br><br><br>
+					<h2>Noted</h2>
+					<h5>
+						Languages: JavaScript, HTML<br>
+						Tools: Nodejs, Versal API, Abcjs API
+					</h5>
+					<p>Interprets text to create sheet music, and reads it in a live playback.</p>
+				</div>
+
+
+				<div id="content" class="grid_8">
+
+					<div class = "data-slick" style="width: 600px">
+						  <div><img src='images/proj/eye1.png'></div>
+						  <div><img src='images/proj/eye2.png'></div>
+					</div>
+
+				</div>
+				<div id="content" class="grid_4 omega">
+					<br><br><br><br><br>
+					<h2>Eye-dentify</h2>
+					<h5>
+						Languages: Java, Python<br>
+						Tools: Android APK, Google Glass, Camfind API, HP Idol On Demand API
+					</h5>
+					<p>Google Glass app incorporating optical character and image recognition.</p>
+				</div>
+			
+			<!-- 	
+			<table style: "text-align: center; padding: 100px;">
+				<tr>
+					<td>
+
+
+					</td>
+					<td style: "padding: 50px;">
 					</td>
 				</tr>
 
@@ -192,7 +257,7 @@
 					</td>
 
 				</tr>
-			</table>
+			</table> -->
 			</div>
 
 		</div>
