give that illustration header a bone

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
 	<div class="slide" id="slide4" data-slide="4" data-stellar-background-ratio="0.5">
 		<div class="container clearfix">
-			<div id="content" class="grid_12">
+			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 20px 0px">
 				<h2>Illustration</h2>
 				<a href = 'http://jubnaut.tumblr.com'>See more on my art blog</a><br><br>
 			</div>
