option to view resume

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 				<h1>Judy Chen</h1>
 				<h5>Game Developer - Illustrator - Musician - Aspiring Pilot </h5>
 				<p>Hi, my name is Judy Chen. I am a fullstack developer interested in space, game theory, virtual reality, and machine learning.</p>
-				<p><a href = "https://github.com/ju-de/ju-de.github.io/raw/master/resume.pdf">Resume</a></p>
+				<p><a href = "/resume.pdf">View Resume   ·   </a><a href = "https://github.com/ju-de/ju-de.github.io/raw/master/resume.pdf">Download Resume</a></p>
+
+				
 					</td>
 				</tr>
 				</table>
