add github, demo links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<h1>Judy Chen</h1>
 				<h5>Game Developer - Illustrator - Musician - Aspiring Pilot </h5>
 				<p>Hi, my name is Judy Chen. I am a fullstack developer interested in space, game theory, virtual reality, and machine learning.</p>
-				<p><a href = "/resume.pdf">View Resume   ·   </a><a href = "https://github.com/ju-de/ju-de.github.io/raw/master/resume.pdf">Download Resume</a></p>
+				<p><a href = "/resume.pdf">View Resume</a>   ·   <a href = "https://github.com/ju-de/ju-de.github.io/raw/master/resume.pdf">Download Resume</a></p>
 
 				
 					</td>
@@ -136,13 +136,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 				</div>
 				<div id="content" class="grid_4 omega">
-						<br><br><br><br><br>
+						<br><br><br><br>
 						<h2>Chorq</h2>
 						<h5>
 							Languages: JavaScript, Jade, HTML5, Python, CSS3, PHP<br>
-							Tools: Node.js, MongoDB, Express, Monk, Kik API, BeautifulSoup, mySQL, Zepto, Monogo
+							Tools: Node.js, MongoDB, Express, Monk, Kik API, BeautifulSoup, mySQL, Zepto, Monogo<br>	
+							Team: James Yu, Andrew Gapic, Justin Stribling
 						</h5>
 						<p>Streamlines tab sharing, allowing users to group tabs into stacks, and Kik them to friends.</p>
+
+						<p><a href="https://github.com/ju-de/chorq">See it on Github</a> · <a href="http://jamesy.us/chorq">Try it out</a></p>
 				</div>
 
 				<div id="content" class="grid_8">
@@ -161,9 +164,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<h2>Pass It On !!</h2>
 						<h5>
 							Languages: JavaScript, JQuery, PHP, HTML5, CSS<br>
-							Tools: MySQL, Facebook API, Ziggeo API, Hammerjs, Google Maps API
+							Tools: MySQL, Facebook API, Ziggeo API, Hammerjs, Google Maps API<br>	
+							Team: James Yu, Frank Liu, Justin Stribling
 						</h5>
 						<p>Location-based image and video sharing platform that visually plots how media spreads by allowing users to track the journey of their uploads.</p>
+
+						<p><a href="http://jamesy.us/passiton/fork">Try it out</a></p>
 				</div>
 
 				<div id="content" class="grid_8">
@@ -179,9 +185,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<h2>Noted</h2>
 					<h5>
 						Languages: JavaScript, HTML<br>
-						Tools: Nodejs, Versal API, Abcjs API
+						Tools: Nodejs, Versal API, Abcjs API<br>
+						Team: Li Xuanji
 					</h5>
 					<p>Interprets text to create sheet music, and reads it in a live playback.</p>
+					<p><a href="https://github.com/ju-de/noted-tool">See it on Github</a></p>
 				</div>
 
 
@@ -198,9 +206,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<h2>Eye-dentify</h2>
 					<h5>
 						Languages: Java, Python<br>
-						Tools: Android APK, Google Glass, Camfind API, HP Idol On Demand API
+						Tools: Android APK, Google Glass, Camfind API, HP Idol On Demand API<br>
+						Team: Li Xuanji, Andrew Mendez, Kevin Brown
 					</h5>
-					<p>Google Glass app incorporating optical character and image recognition.</p>
+					<p>Google Glass ocular scanner search app incorporating optical character and image recognition.<br><br>
+					🏆 Best Use of Google Services Award</p>
+					<p><a href="https://github.com/ju-de/noted-tool">See it on Github</a></p>
 				</div>
 			
 			<!-- 	
@@ -299,8 +310,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<br><br>
 
 				<h1>Bleach Bear</h1>
-				<br> A game in which you are an armless bear. As you are unarmed, the only logical thing to do is to, of course, shoot honeycombs with a fish gun.
-				<br><br>
+				<p><a href="https://github.com/ju-de/bleachbear-game">See it on Github</a> · <a href="">Try the demo</a></p>
+				<p>A game in which you are an armless bear. As you are unarmed, the only logical thing to do is to, of course, shoot honeycombs with a fish gun.</p>
+				<br>
 
 
 				<div id="content" class="grid_6 omega">
@@ -367,6 +379,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<b>Boom-ble bee</b><br>
 					Just beecause.
 				</div>
+
 			</div>
 		</div>
 	</div>
