add old art blog

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="container clearfix">
 			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 20px 0px">
 				<h2>Illustration</h2>
-				<a href = 'http://jubnaut.tumblr.com'>See more on my art blog</a><br><br>
+				See more on my art blogs: <a href = 'http://jubnaut.tumblr.com'>new</a> and <a href = 'http://joobify.tumblr.com'>old</a><br><br>
 			<div id="content" class="grid_6">
 			
 				<img src="http://41.media.tumblr.com/c3e24de5d58998bfeb91abbb8e599659/tumblr_n4xdt1jUqY1tsbehao1_r2_1280.png">
