--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<div class = "data-slick" style="width: 600px">
 						<div><img src='images/proj/pio1.png'></div>
 						<div><img src='images/proj/pio2.png'></div>
-						<div><img src='images/proj/pio3.png'></div>
+						<div><img src='images/proj/pio3.jpg'></div>
 						<div><img src='images/proj/pio4.png'></div>
 						<div><img src='images/proj/pio5.png'></div>
 					</div>
@@ -317,27 +317,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 				<div id="content" class="grid_6 omega">
 
-				<img src='http://i.imgur.com/qA3MTJ7.gif'>
-				<img src='http://i.imgur.com/NPtLTht.gif'>
-				<img src='http://i.imgur.com/7dX2xED.gif'>
-				<img src='http://i.imgur.com/gdrtWgr.gif'>
-				<img src='http://i.imgur.com/RqoLAmj.gif'>
-				<img src='http://i.imgur.com/WF92SWT.gif'>
-				<br>
+					<img src='http://i.imgur.com/qA3MTJ7.gif'>
+					<img src='http://i.imgur.com/NPtLTht.gif'>
+					<img src='http://i.imgur.com/7dX2xED.gif'>
+					<img src='http://i.imgur.com/gdrtWgr.gif'>
+					<img src='http://i.imgur.com/RqoLAmj.gif'>
+					<img src='http://i.imgur.com/WF92SWT.gif'>
+
+					<br>
+
 				</div>
+
 				<div id="content" class="grid_6 omega">
-				<h2>Player</h2>
-				<p>This is you. You are a bear. You have nothing but your trusty fish gun. Not even arms. Why, you ask? But you can't speak. You are a bear.</p>
-				<br>
+					<h2>Player</h2>
+					<p>This is you. You are a bear. You have nothing but your trusty fish gun. Not even arms. Why, you ask? But you can't speak. You are a bear.</p>
+					<br>
 				</div>
-
-
-
 
 				<div id="content" class="grid_8">
-				<h2>Enemies</h2>
-				<p>These are the honeycombs. The honeycombs have faces. This one walks. And the other one flies. How? You do not know. Once again, you are a bear.</p>
+					<h2>Enemies</h2>
+					<p>These are the honeycombs. The honeycombs have faces. This one walks. And the other one flies. How? You do not know. Once again, you are a bear.</p>
 				</div>
+
 				<div id="content" class="grid_4 omega">
 					<img src='http://i.imgur.com/qDJloCW.gif'>
 					<img src='http://i.imgur.com/fQYapml.gif'>
@@ -381,6 +382,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				</div>
 
 			</div>
+
+			<div id="content" class="grid_12">
+				<br><br>
+			
+				<h1>Tikitunes</h1>
+				<p><a href="https://github.com/ju-de/bleachbear-game">See it on Github</a>
+				<p>A memory dance game. Follow the AI's moves to get the high score.</p>
+				<br>
+
+				<div>
+					<img src='images/proj/tkt/b1.gif'>
+					<img src='images/proj/tkt/b2.gif'>
+					<img src='images/proj/tkt/b3.gif'>
+					<img src='images/proj/tkt/b4.gif'>
+					<img src='images/proj/tkt/b5.gif'>
+				</div>
+
+				<div>
+					<img src='images/proj/tkt/p1.gif'>
+					<img src='images/proj/tkt/p2.gif'>
+					<img src='images/proj/tkt/p3.gif'>
+					<img src='images/proj/tkt/p4.gif'>
+					<img src='images/proj/tkt/p5.gif'>
+					<img src='images/proj/tkt/p6.gif'>
+				</div>
+
+
+			</div>
+
 		</div>
 	</div>
 
