--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 			<div id="content" class="grid_12" style="background: rgba(0,0,0,0.85); padding: 40px 30px 80px;">
 				<h1>Grilled</h1>
-				<p><a href="https://github.com/ju-de/grilled">See it on Github</a> · <a href="https://jub.itch.io/grilled">Try the demo</a></p>
+				<p><a href="https://github.com/ju-de/grilled">See it on Github</a> · <a href="http://jud.yt/grilled">Try the demo</a></p>
 
 				<div id="content" class="grid_5 omega">
 				<img src='images/games/grilled.gif'>
